# chinese_doc_search

./: .gitignore  Dockerfile  create_fake_data.py  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
src/: chinese_converter.py  database.py  layout.py  main.py
src/dataclass/: article.py
src/routes/: display_table.py  entry.py  search_article.py
