[project]
name = "chinese-doc-search"
version = "0.1.0"
description = "Simple Chinese document search engine using Elasticsearch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elasticsearch==8.17.0",
    "faker==33.1.0",
    "opencc==1.1.9",
    "python-dotenv==1.0.1",
    "python-fasthtml>=0.12",
    "tqdm==4.67.1",
]
